fixed nav padding on tablet view

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,12 @@ nav .nav ul {
     }
 }
 
+@media only screen and (max-width: 800px){
+    nav .nav {
+        padding: 10px 40px;
+    }
+}
+
 @media only screen and (max-width: 500px) {
     nav .nav {
         padding: 10px 15px;
